--- a/angular-src/src/app/components/contact-us/contact-us.component.html
+++ b/angular-src/src/app/components/contact-us/contact-us.component.html
@@ -60,7 +60,12 @@
           </div>
         </div>
       </div>
- 
+      <div class="row contsct-us__submit-btn__block">
+        <div class="col-12">
+          <!--<a href="/" type="button" class="btn btn-warning btn-lg btn-block">Submit</a> -->
+          <a class="contsct-us__submit-btn__stile text-center float-right" routerLink="/"> Submit <span class="sr-only"> Submit </span></a>
+        </div>
+      </div>
     </form>
   </div>
   <footer *ngIf="sizeWindow > 992; else werticalFooter">
