--- a/angular-src/src/app/components/signin/signin.component.html
+++ b/angular-src/src/app/components/signin/signin.component.html
@@ -184,9 +184,9 @@
                     </button>
                   </div>
                 </form>
-                <div class="d-flex justify-content-around">
-                  <a class="cursor-pointer" (click)="setMenuValue(2)">Register</a>
-                  <a class="cursor-pointer" (click)="setMenuValue(1)">Forgot password?</a>
+                <div class="d-flex justify-content-around form-switch">
+                  <a class="cursor-pointer float-shadow" (click)="setMenuValue(2)">Register</a>
+                  <a class="cursor-pointer float-shadow" (click)="setMenuValue(1)">Forgot password?</a>
                 </div>
               </div>
             </div>
