--- a/angular-src/src/app/components/modals/projects-modal/projects-modal.component.html
+++ b/angular-src/src/app/components/modals/projects-modal/projects-modal.component.html
@@ -1,6 +1,6 @@
+<!--  (click)="onContainerClicked($event)" -->
 <div
   class="modal-padding"
-  (click)="onContainerClicked($event)"
   class="modal fade"
   tabindex="-1"
   [ngClass]="{'in': visibleAnimate}"
@@ -9,9 +9,23 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title" id="myModalLabel">{{title}}</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="close()">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <div *ngIf="changeFlag == true">
+          <div *ngIf="project.title">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="close()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+        <div *ngIf="createFlag == true">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div *ngIf="dropFlag == true">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       </div>
       <div class="modal-body">
         <div *ngIf="dropFlag == true">
@@ -22,12 +36,12 @@
           </div>
         </div>
         <div class="form-inline" *ngIf="changeFlag == true">
-            <label class="pr-2"><strong>Project name: </strong></label>
-            <input 
-              class="form-control" 
-              [maxLength]="projectNameLength"
-              [(ngModel)]="project.title" 
-            />
+          <label class="pr-2"><strong>Project name: </strong></label>
+          <input
+            class="form-control"
+            [maxLength]="projectNameLength"
+            [(ngModel)]='project.title'
+          />
         </div>
         <div class="form-inline" *ngIf="createFlag == true">
           <label class="pr-2"><strong>Project name: </strong></label>
@@ -47,11 +61,16 @@
           <div class="d-flex justify-content-end">
             <div class="form-group pr-1">
               <button *ngIf="dropFlag == true" class="btn btn-danger" (click)="deleteItem(project)">Delete</button>
-              <button *ngIf="changeFlag == true" class="btn btn-success" (click)="changeItem(project, project.title)">Change</button>
+              <button *ngIf="changeFlag == true" class="btn btn-success" (click)="changeItem(project, project.title)" [disabled]="!project.title">Change</button>
               <button *ngIf="createFlag == true" class="btn btn-success" (click)="addNewProject(itemElement)" [disabled]="!itemElement">Add</button>
             </div>
             <div class="pl-1 pr-2">
-              <button class="btn btn-primary" (click)="close()">Close</button>
+              <div *ngIf="createFlag == true">
+                    <button class="btn btn-primary" (click)="close()">Close</button>
+                  </div>
+              <div *ngIf="project">
+                <button class="btn btn-primary" [disabled]="!project.title" (click)="close()">Close</button>
+              </div>
             </div>
           </div>
         </div>
