--- a/angular-src/documentation/components/SuperadminComponent.html
+++ b/angular-src/documentation/components/SuperadminComponent.html
@@ -190,7 +190,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:24</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:23</a></div>
                             </td>
                         </tr>
 
@@ -297,7 +297,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="79" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:79</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:70</a></div>
                             </td>
                         </tr>
 
@@ -392,7 +392,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="96" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:96</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:86</a></div>
                             </td>
                         </tr>
 
@@ -461,7 +461,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:33</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:32</a></div>
                             </td>
                         </tr>
 
@@ -511,7 +511,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:22</a></div>
                             </td>
                         </tr>
 
@@ -545,7 +545,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:20</a></div>
                             </td>
                         </tr>
 
@@ -579,7 +579,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -613,7 +613,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:21</a></div>
                             </td>
                         </tr>
 
@@ -647,7 +647,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:24</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:23</a></div>
                             </td>
                         </tr>
 
@@ -681,7 +681,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:17</a></div>
                             </td>
                         </tr>
 
@@ -715,7 +715,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/superadmin/superadmin.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -744,7 +744,6 @@ import { Profile } from &#x27;../profile/profile.model&#x27;;
 })
 
 export class SuperadminComponent implements OnInit {
-// TODO: Clear console.log + comments
   users: Profile[];
   usersArr: any;
   projects: IProject;
@@ -764,44 +763,36 @@ export class SuperadminComponent implements OnInit {
     const superAdminEmail &#x3D; &#x27;superAdmin@ampx.ca&#x27;;
     const adminEmail &#x3D; &#x27;admin@ampx.ca&#x27;;
     this.isAdmin &#x3D; false;
-    //
     if (window.localStorage) {
       const user &#x3D; localStorage.getItem(&#x27;user&#x27;);
       const u &#x3D; JSON.parse(user);
       this.userEmail &#x3D; u.email;
       this.userGuid &#x3D; u.guid;
       this.isAdmin &#x3D; (this.userEmail &#x3D;&#x3D;&#x3D; adminEmail);
-      console.log(this.isAdmin);
     }
-
-    //
     this.usersService.getUsers().subscribe(userList &#x3D;&gt; {
       this.users &#x3D; userList;
       this.usersArr &#x3D; [];
         for (let i &#x3D; 0; i &lt; this.users.length; ++i) {
           const itemUser &#x3D; this.users[i];
           if ( itemUser.email &#x3D;&#x3D;&#x3D; superAdminEmail || itemUser.email &#x3D;&#x3D;&#x3D; adminEmail) {
-
           } else {
             this.usersArr.push(itemUser);
           }
         }
-        //
-        console.log(this.usersArr);
         for (let i &#x3D; 0; i &lt; this.usersArr.length; ++i) {
           const userItem &#x3D; this.usersArr[i];
           userItem.projectList &#x3D; [];
-          this.projectService.getProject(userItem.email).subscribe(userProjectList &#x3D;&gt; {
+          this.projectService.getProject(userItem.guid).subscribe(userProjectList &#x3D;&gt; {
               userItem.projectList.push(userProjectList);
             },
             err &#x3D;&gt; {
-              console.log(err);
+              console.error(err);
               return false;
             });
         }
-      },
-      err &#x3D;&gt; {
-        console.log(err);
+      }, err &#x3D;&gt; {
+        console.error(err);
         return false;
       });
   }
@@ -810,16 +801,15 @@ export class SuperadminComponent implements OnInit {
     this.usersService.deleteUser(userId).subscribe(req &#x3D;&gt; {
       if (req.success) {
         this.usersArr.splice(userItemNumber, 1);
-      } else {
-        console.log(&#x27;it is not work&#x27;);
       }
+    }, err &#x3D;&gt; {
+      console.error(err);
     });
     this.projectService.deleteProjectByUserGuid(userGuid).subscribe(req &#x3D;&gt; {
       if (req.success) {
-        console.log(&#x27;It is work&#x27;);
-      } else {
-        console.log(&#x27;It was good try&#x27;);
       }
+    }, err &#x3D;&gt; {
+      console.error(err);
     });
   }
 
@@ -827,9 +817,8 @@ export class SuperadminComponent implements OnInit {
     this.projectService.getProject(userGuid).subscribe(userProjectList &#x3D;&gt; {
         this.projects &#x3D; userProjectList;
         this.projectArray.push(userProjectList);
-      },
-      err &#x3D;&gt; {
-        console.log(err);
+      }, err &#x3D;&gt; {
+        console.error(err);
         return false;
       });
   }
@@ -905,7 +894,7 @@ export class SuperadminComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><div class="container">  <div class="d-flex justify-content-center">    <p class="h5"> Users list and their projects </p>  </div>  <div *ngIf="usersArr">    <div *ngFor="let itemUser of usersArr; let i = index">      <div class="d-flex flex-row">        <div class="p-2">{{itemUser.firstName}}</div>        <div class="p-2">{{itemUser.lastName}}</div>        <div class="p-2">{{itemUser.email}}</div>        <div class="p-2">{{itemUser.companyName}}</div>        <div class="p-2">{{itemUser.phone}}</div>        <div class="ml-auto p-2" [hidden]="isAdmin">          <a             class="btn btn-danger"            data-toggle="tooltip"            data-placement="top"            title="Delete user"            (click)="deleteUser(itemUser._id, i, itemUser.email)"          >            <i class="fa fa-trash-o" aria-hidden="true"></i>          </a>        </div>      </div>      <div class="d-flex flex-row" *ngFor="let itemProject of itemUser.projectList[0]">        <div class="d-flex flex-column">          <div class="p-2">            <a class="table-link table-cursor disable-decoration table-text-style" [routerLink]="[\'/project\', itemProject._id]">              <strong>                {{itemProject.title}}              </strong>            </a>          </div>        </div>      </div>    </div>  </div></div></div>'
-    var COMPONENTS = [{'name': 'AboutUsComponent', 'selector': 'app-about-us'},{'name': 'AdminComponent', 'selector': 'app-admin'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CableDistanceModalComponent', 'selector': 'app-cable-distance-modal'},{'name': 'CableItemComponent', 'selector': 'app-cable-item'},{'name': 'CableListComponent', 'selector': 'app-cable-list'},{'name': 'ContactUsComponent', 'selector': 'app-contact-us'},{'name': 'ControllerItemComponent', 'selector': 'app-controller-item'},{'name': 'ControllerModalComponent', 'selector': 'app-controller-modal'},{'name': 'ControllersListComponent', 'selector': 'app-controllers-list'},{'name': 'DropDownComponent', 'selector': 'app-drop-down'},{'name': 'DropDownDependentComponent', 'selector': 'app-drop-down-dependent'},{'name': 'ElectricalItemComponent', 'selector': 'app-electrical-item'},{'name': 'ElectricalListComponent', 'selector': 'app-electrical-list'},{'name': 'ElectricalsModalComponent', 'selector': 'app-electricals-modal'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'InstrumentationItemComponent', 'selector': 'app-instrumentation-item'},{'name': 'InstrumentationListComponent', 'selector': 'app-instrumentation-list'},{'name': 'IoAssignmentComponent', 'selector': 'app-io-assignment'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'MultipleModalComponent', 'selector': 'app-multiple-modal'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'ProfileComponent', 'selector': 'app-profile'},{'name': 'ProjectComponent', 'selector': 'app-project'},{'name': 'ProjectDashboardComponent', 'selector': 'app-project-dashboard'},{'name': 'ProjectsModalComponent', 'selector': 'app-projects-modal'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ServicesComponent', 'selector': 'app-services'},{'name': 'SigninComponent', 'selector': 'app-signin'},{'name': 'SimpleElectricalModalComponent', 'selector': 'app-simple-electrical-modal'},{'name': 'SldScheduleItemComponent', 'selector': 'app-sld-schedule-item'},{'name': 'SldScheduleListComponent', 'selector': 'app-sld-schedule-list'},{'name': 'SuperadminComponent', 'selector': 'app-superadmin'},{'name': 'TeamWorkModalComponent', 'selector': 'app-team-work-modal'}];
+    var COMPONENTS = [{'name': 'AboutUsComponent', 'selector': 'app-about-us'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CableDistanceModalComponent', 'selector': 'app-cable-distance-modal'},{'name': 'CableItemComponent', 'selector': 'app-cable-item'},{'name': 'CableListComponent', 'selector': 'app-cable-list'},{'name': 'ContactUsComponent', 'selector': 'app-contact-us'},{'name': 'ControllerItemComponent', 'selector': 'app-controller-item'},{'name': 'ControllerModalComponent', 'selector': 'app-controller-modal'},{'name': 'ControllersListComponent', 'selector': 'app-controllers-list'},{'name': 'DropDownComponent', 'selector': 'app-drop-down'},{'name': 'DropDownDependentComponent', 'selector': 'app-drop-down-dependent'},{'name': 'ElectricalItemComponent', 'selector': 'app-electrical-item'},{'name': 'ElectricalListComponent', 'selector': 'app-electrical-list'},{'name': 'ElectricalsModalComponent', 'selector': 'app-electricals-modal'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'InstrumentationItemComponent', 'selector': 'app-instrumentation-item'},{'name': 'InstrumentationListComponent', 'selector': 'app-instrumentation-list'},{'name': 'IoAssignmentComponent', 'selector': 'app-io-assignment'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'MultipleModalComponent', 'selector': 'app-multiple-modal'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'ProfileComponent', 'selector': 'app-profile'},{'name': 'ProjectComponent', 'selector': 'app-project'},{'name': 'ProjectDashboardComponent', 'selector': 'app-project-dashboard'},{'name': 'ProjectsModalComponent', 'selector': 'app-projects-modal'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ServicesComponent', 'selector': 'app-services'},{'name': 'SigninComponent', 'selector': 'app-signin'},{'name': 'SimpleElectricalModalComponent', 'selector': 'app-simple-electrical-modal'},{'name': 'SldScheduleItemComponent', 'selector': 'app-sld-schedule-item'},{'name': 'SldScheduleListComponent', 'selector': 'app-sld-schedule-list'},{'name': 'SuperadminComponent', 'selector': 'app-superadmin'},{'name': 'TeamWorkModalComponent', 'selector': 'app-team-work-modal'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'SuperadminComponent'};
 </script>
