Add clone functionality - version 0.0.3

--- a/angular-src/src/app/components/modals/copy-project-modal/copy-project-modal.component.html
+++ b/angular-src/src/app/components/modals/copy-project-modal/copy-project-modal.component.html
@@ -38,7 +38,7 @@
                 <button class="btn btn-success" (click)="simpleCopyProject(nameCopiedProject)" [disabled]="!nameCopiedProject">Copy project</button>
               </div>
               <div class="pl-1 pr-2">
-                <button class="btn btn-primary" (click)="close()" [disabled]="!nameCopiedProject">Close</button>
+                <button class="btn btn-primary" (click)="close()">Close</button>
               </div>
             </div>
           </div>
@@ -47,3 +47,4 @@
     </div>
   </ng-container>
 </div>
+<!-- [disabled]="!nameCopiedProject" -->
