Add clone functionality - version 0.0.5

--- a/angular-src/src/app/components/electrical-item/electrical-item.component.html
+++ b/angular-src/src/app/components/electrical-item/electrical-item.component.html
@@ -18,7 +18,13 @@
           <div class="col-12 col-sm-3 align-self-end" *ngIf="electricalItem">
             <div class="form-group">
               <label for="dateCreate">Date added</label>
-              <input type="text" class="form-control" [(ngModel)]="date" name="dateCreate" disabled>
+              <input
+                type="text"
+                class="form-control"
+                [ngModel]="electricalItem.dateCreate | date:'yyyy-MM-dd'" 
+                name="dateCreate"
+                disabled
+              >
             </div>
           </div>
           <div class="col-12 col-sm-3 align-self-end" *ngIf="electricalItem">
