--- a/angular-src/src/app/components/modals/copy-project-modal/copy-project-modal.component.html
+++ b/angular-src/src/app/components/modals/copy-project-modal/copy-project-modal.component.html
@@ -23,7 +23,7 @@
             />
           </div>
           <div class="form-inline">
-            <label class="pr-2"><strong>Name for the cloned Project: </strong></label>
+            <label class="pr-2"><strong>Name for the cloned project: </strong></label>
             <input
               class="form-control"
               [maxLength]="projectNameLength"
